syntax = "proto3";
package demo_ingestion;

option go_package = "buf.build/gen/go/brucearctor/demo-ingestion/protocolbuffers/go";

import "google/api/annotations.proto";

message PostFlightStatusRequest {
  string flight_id = 1;
  int64 scheduled_takeoff = 2; // maybe timestamp type
  int64 actual_takeoff = 3;
  int64 current_timestamp = 4;
  int64 altitude = 5;
  bool in_air = 6; // TBD whether want this included
  bool landed = 7;
  double latitude = 8; // maybe lat/long type?
  double longitude = 9; // same?
  int32 direction = 10; // ex: 1-360 for degrees.  Else enum
  string airline = 11;
  int32 flight_number = 12;
  string departing_airport = 13; // ENUM?
  string arriving_airport = 14; // ENUM?
  // TBD:  Do we want metadata [ ex: fields 11-14 ] transmitted in every message?
  // OR, maybe part of a flight_plan message that is distinct?
}

message PostFlightStatusResponse {
    string response = 1;
}

service FlightsService {
    rpc PostFlightStatus (PostFlightStatusRequest) returns (PostFlightStatusResponse) {
      option (google.api.http) = {
        post: "/v1/flightstatus"
        body: "*"
      };
    }
}
